--- a/src/pages/en/guides/migrate-to-astro/from-pelican.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-pelican.mdx
@@ -16,15 +16,15 @@ Pelican and Astro share some similarities that will help you migrate your projec
 
 - Pelican and Astro are both static-site generators, ideally suited to [content-focused websites](/en/concepts/why-astro/#content-focused) like blogs.
 
-- Pelican and Astro both have built-in support for writing in Markdown, including frontmatter YAML properties for page metadata. However, Astro has very few reserved frontmatter properties compared to Pelican. Even though many of your existing Pelican frontmatter properties will not be "special" in Astro, this metadata can be accessed and used by Astro components. So, you can continue to use your existing Markdown files and frontmatter values.
+- Pelican and Astro both have built-in support for [writing in Markdown](/en/guides/content/#markdown-authoring), including frontmatter YAML properties for page metadata. However, Astro has very few reserved frontmatter properties compared to Pelican. Even though many of your existing Pelican frontmatter properties will not be "special" in Astro, you can continue to use your existing Markdown files and frontmatter values.
 
 ## Key Differences between Pelican and Astro
 
 When you rebuild your Pelican site in Astro, you will notice some important differences:
 
-- Pelican supports writing content in Markdown and reStructured Text (`.rst`). Astro supports creating pages from Markdown and MDX files, but does not support reStructured Text.
+- Pelican supports writing content in Markdown and reStructured Text (`.rst`). Astro supports [creating pages from Markdown and MDX](/en/guides/markdown-content/) files, but does not support reStructured Text.
 
-- Pelican uses HTML files and Jinja syntax for templating. Astro uses `.astro` files, which are written using a syntax that is a superset of HTML. All valid HTML is valid `.astro` syntax.
+- Pelican uses HTML files and Jinja syntax for templating. [Astro syntax](/en/core-concepts/astro-components/) is a JSX-like superset of HTML. All valid HTML is valid `.astro` syntax.
 
 - Pelican was designed to build content-rich websites like blogs and has some built-in, blog features that you would have to build yourself in Astro. Instead, Astro offers some of these features included in an [official blog theme](https://github.com/withastro/astro/tree/latest/examples/blog).
 
