--- a/src/pages/en/guides/migrate-to-astro/from-hugo.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-hugo.mdx
@@ -16,9 +16,9 @@ Hugo and Astro share some similarities that will help you migrate your project:
 
 - Hugo and Astro are both modern static-site generators, ideally suited to [content-focused websites](/en/concepts/why-astro/#content-focused) like blogs.
 
-- Hugo and Astro both allow you to author your content in Markdown. However, Hugo includes several special frontmatter properties and allows you to write frontmatter in YAML, TOML or JSON. Even though many of your existing Hugo frontmatter properties will not be "special" in Astro, you can continue to use your existing Markdown files and frontmatter values.
+- Hugo and Astro both allow you to [author your content in Markdown](/en/guides/content/#markdown-authoring). However, Hugo includes several special frontmatter properties and allows you to write frontmatter in YAML, TOML or JSON. Even though many of your existing Hugo frontmatter properties will not be "special" in Astro, you can continue to use your existing Markdown files and YAML frontmatter values.
 
-- Hugo and Astro both allow you to enhance your site with a variety of plugins and external packages.
+- Hugo and Astro both allow you to enhance your site with a variety of [integrations and external packages](https://astro.build/integrations/).
 
 
 
@@ -30,9 +30,9 @@ When you rebuild your Hugo site in Astro, you will notice some important differe
 
 - Hugo sites are created using Markdown (`.md`) files for page content and HTML (`.html`) templates for layout. Astro is component-based, and uses Astro components, which include HTML templating for pages, layouts and individual UI elements. Astro can also create pages from `.md` and `.mdx` files, using an Astro layout component for wrapping Markdown content in a page template.
 
-- Astro does not use shortcodes for dynamic content in standard Markdown files, but it does allow you to use JSX and import components in MDX files.
+- Astro does not use shortcodes for dynamic content in standard Markdown files, but [Astro's Markdown integration](/en/guides/integrations-guide/mdx/) does allow you to use JSX and import components in MDX files.
 
-- While Hugo can use "partials" for reusable layout elements, Astro is entirely component-based. Any `.astro` file can be a component, a layout or an entire page, and can import and render any other Astro components. Astro components can also render other UI framework components (e.g. React, Svelte, Vue, Solid) as well as content or metadata from other files in your project, such as Markdown or MDX.
+- While Hugo can use "partials" for reusable layout elements, [Astro is entirely component-based](/en/core-concepts/astro-components/). Any `.astro` file can be a component, a layout or an entire page, and can import and render any other Astro components. Astro components can also include [other UI framework components (e.g. React, Svelte, Vue, Solid)](/en/core-concepts/framework-components/) as well as content or metadata from [other files in your project](/en/guides/imports/), such as Markdown or MDX.
 
 ## Switch from Hugo to Astro
 
