--- a/src/pages/en/guides/migrate-to-astro/from-jekyll.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-jekyll.mdx
@@ -16,18 +16,18 @@ Jekyll and Astro share some similarities that will help you migrate your project
 
 - Both Jekyll and Astro are static-site generators, commonly used to create blogs.
 
-- Jekyll and Astro both allow you to write your content in Markdown and HTML. Astro syntax is a superset of HTML, so creating new pages should feel familiar.
+- Both Jekyll and Astro allow you to [write your content in Markdown and HTML](/en/guides/content/). Jekyll and Astro both provide some special frontmatter YAML properties for page layout and unpublished draft posts. You can continue to use your existing Markdown files in Astro.
 
-- Both Jekyll and Astro use file-based routing for blog posts. Astro provides a special `src/pages/` directory, and any Astro, Markdown or MDX file contained within that folder creates a page route. Jekyll uses a similar special folder called `_posts/` for your Markdown blog posts, however your site pages can exist elsewhere. Creating new Markdown posts should feel familiar in Astro. Jekyll and Astro both provide some special frontmatter YAML properties for page layout and unpublished draft posts.
+- Both Jekyll and Astro use [file-based routing](/en/core-concepts/routing/) for creating pages from your blog posts. Astro provides a [special `src/pages/` directory for all pages and posts](/en/core-concepts/project-structure/#srcpages). Jekyll uses a similar special folder called `_posts/` for your Markdown blog posts, however your site pages can exist elsewhere. Creating new blog posts should feel familiar.
 
 
 ## Key Differences between Jekyll and Astro
 
 When you rebuild your Jekyll site in Astro, you will notice some important differences:
 
-- As Jekyll is primarily a blogging platform, several blog features are built-in that you may have to build yourself in Astro, or choose a template theme that includes these features. Jekyll has built-in support for tags and categories which you will find in several Astro blog themes, but is not included in a minimal Astro project.
+- As Jekyll is primarily a blogging platform, several blog features are built-in that you may have to build yourself in Astro. Or, choose a [blog starter template theme](https://astro.build/themes/blog/) that includes these features. For example, Jekyll has built-in support for tags and categories which you will find in several Astro blog themes, but is not included in a minimal Astro project.
 
-- While Jekyll uses Liquid templates for reusable layout elements and templating, Astro uses JSX-like `.astro` files for templating and components. Any `.astro` file can be a component, a layout or an entire page, and can import and render any other Astro components. Astro components can also render other UI framework components (e.g. React, Svelte, Vue, Solid) as well as content or metadata from other files in your project, such as Markdown or MDX.
+- Jekyll uses Liquid templates for reusable layout elements and templating. Astro uses JSX-like [`.astro` files for templating and components](/en/core-concepts/astro-components/). Any `.astro` file can be a component, a layout or an entire page, and can import and render any other Astro components. You can also build using [other UI framework components (e.g. React, Svelte, Vue, Solid)](/en/core-concepts/framework-components/) as well as content or metadata from [other files in your project](/en/guides/imports/), such as Markdown or MDX.
 
 
 ## Switch from Jekyll to Astro
@@ -54,7 +54,11 @@ You can pass a `--template` argument to the `create-astro` command to start a ne
     </Fragment>
   </PackageManagerTabs>
 
-Bring your existing Markdown files as content to [create Markdown pages](/en/guides/markdown-content/), using an Astro component layout instead of a Liquid template. Instead of writing `.html` page files directly, you will write `.astro` files in a language that is a super-set of HTML. Much of your existing HTML page content can transfer into [Astro pages](/en/core-concepts/astro-pages/), and you will additionally be able to [use variables, JSX-like expressions and component imports directly in your HTML templating](/en/core-concepts/astro-components/#jsx-like-expressions).
+Bring your existing Markdown files as content to [create Markdown pages](/en/guides/markdown-content/), using an [Astro Markdown layout](/en/core-concepts/layouts/#markdownmdx-layouts) instead of a Liquid template. 
+
+Much of your existing HTML page content can be converted into [Astro pages](/en/core-concepts/astro-pages/), and you will additionally be able to [use variables, JSX-like expressions and component imports directly in your HTML templating](/en/core-concepts/astro-components/#jsx-like-expressions).
+
+Astro does not have a `permalink` property that accepts placeholders. You may need to read more about [Astro's page routing](/en/core-concepts/routing/), or [configuring Markdown](/en/guides/markdown-content/#configuring-markdown-and-mdx) if you want to keep your existing URL structure. Or, consider [setting redirects at your host, like Netlify](https://docs.netlify.com/routing/redirects/).
 
 To convert other types of sites, such as a portfolio or documentation site, see more official starter templates on [astro.new](https://astro.new). You'll find a link to each project's GitHub repository, as well as one-click links to open a working project in StackBlitz, CodeSandbox and Gitpod online development environments.
 
