edit to Jekyll advice re permalinks

--- a/src/pages/en/guides/migrate-to-astro/from-jekyll.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-jekyll.mdx
@@ -58,7 +58,7 @@ Bring your existing Markdown files as content to [create Markdown pages](/en/gui
 
 Much of your existing HTML page content can be converted into [Astro pages](/en/core-concepts/astro-pages/), and you will additionally be able to [use variables, JSX-like expressions and component imports directly in your HTML templating](/en/core-concepts/astro-components/#jsx-like-expressions).
 
-Astro does not have a `permalink` property that accepts placeholders. You may need to read more about [Astro's page routing](/en/core-concepts/routing/), or [configuring Markdown](/en/guides/markdown-content/#configuring-markdown-and-mdx) if you want to keep your existing URL structure. Or, consider [setting redirects at your host, like Netlify](https://docs.netlify.com/routing/redirects/).
+Astro does not have a `permalink` property that accepts placeholders. You may need to read more about [Astro's page routing](/en/core-concepts/routing/) if you want to keep your existing URL structure. Or, consider [setting redirects at a host like Netlify](https://docs.netlify.com/routing/redirects/).
 
 To convert other types of sites, such as a portfolio or documentation site, see more official starter templates on [astro.new](https://astro.new). You'll find a link to each project's GitHub repository, as well as one-click links to open a working project in StackBlitz, CodeSandbox and Gitpod online development environments.
 
