--- a/src/pages/ja/core-concepts/astro-components.mdx
+++ b/src/pages/ja/core-concepts/astro-components.mdx
@@ -11,7 +11,7 @@ i18nReady: true
 
 Astroコンポーネントの構文は、HTMLのスーパーセットです。この構文は、[HTMLやJSXを書いたことのある人なら誰でも親しみやすいように設計されています](#astroとjsxの違い)。また、コンポーネントとJavaScript式を含むためのサポートも追加されています。Astroコンポーネントは、ファイル拡張子が`.astro`なので、すぐ見分けられます。
 
-Astroコンポーネントは非常に柔軟です。多くの場合、Astroコンポーネントは、ヘッダーやプロフィールカードのような、ページ上で**再利用可能なUI**を含むことになります。また、Astroコンポーネントには、SEO対策を容易にする一般的な`<meta>`タグのコレクションのような、小さなHTMLのスニペットが含まれることもあります。Astroコンポーネントは、ページ全体のレイアウトを含められます。
+Astroコンポーネントは非常に柔軟です。多くの場合、Astroコンポーネントは、ヘッダーやプロフィールカードのような、ページ上で**再利用可能なUI**を含むことになります。また、Astroコンポーネントには、SEO対策を容易にする共通の`<meta>`タグのコレクションのような、小さなHTMLのスニペットが含まれることもあります。Astroコンポーネントは、ページ全体のレイアウトを含められます。
 
 Astroコンポーネントについて知っておくべきもっとも重要なことは、**ビルド中にHTMLへ変換される**ことです。コンポーネントの内部でJavaScriptコードを実行しても、すべて事前に実行され、ユーザーに送られる最終ページからは取り除かれます。その結果、デフォルトでは、追加されるJavaScriptの痕跡のない、より高速なサイトが実現します。
 
@@ -68,7 +68,7 @@ const data = await fetch('SOME_SECRET_API_URL/users').then(r => r.json());
 <!-- テンプレートはここに書きます -->
 ```
 
-コードフェンスは、その中に書かれたJavaScriptが「守られる」ことを保証するために設計されています。フロントエンドのアプリケーションに漏れたり、ユーザーの手に渡ったりしません。高コストなコードや機密性の高いコード（プライベートなデータベースの呼び出しなど）が、ユーザーのブラウザに届くことを心配せずに、安全にコードを書けます。
+コードフェンスは、その中に書かれたJavaScriptを「囲い込む」ことを保証するために設計されています。コードがフロントエンドのアプリケーションに漏れたり、ユーザーの手に渡ったりしません。高コストなコードや機密性の高いコード（プライベートなデータベースの呼び出しなど）が、ユーザーのブラウザに届くことを心配せずに、安全にコードを書けます。
 
 :::tip
 コンポーネントスクリプトの中には、TypeScriptも書けます！
@@ -80,7 +80,7 @@ const data = await fetch('SOME_SECRET_API_URL/users').then(r => r.json());
 
 ここにプレーンなHTMLを書けば、そのコンポーネントはAstroのページでインポートされて使用される際にそのHTMLをレンダリングします。
 
-ただし、Astroのコンポーネントテンプレート構文は、**JavaScript式**、**インポートしたコンポーネント**、[**特別なAstroディレクティブ**](/ja/reference/directives-reference/)もサポートしています。コンポーネントスクリプトで（ページ構築時に）定義されたデータと値は、コンポーネントテンプレートで使用され、動的に作成されたHTMLを生成できます。
+ただし、Astroのコンポーネントテンプレート構文は、**JavaScript式**、**インポートしたコンポーネント**、[**特別なAstroディレクティブ**](/ja/reference/directives-reference/)もサポートしています。コンポーネントスクリプトで（ページ構築時に）定義されたデータと値をコンポーネントテンプレートで使用し、動的に作成されたHTMLを生成できます。
 
 ```astro title="src/components/MyFavoritePokemon.astro"
 ---
@@ -92,7 +92,7 @@ const myFavoritePokemon = [/* ... */];
 
 <h1>Hello, world!</h1>
 
-<!-- propsやコンポーネントスクリプトの変数を使用します。 -->
+<!-- propsやコンポーネントスクリプトの変数を使用します -->
 <p>好きなポケモンは: {Astro.props.title}</p>
 
 <!-- `client:`ディレクティブで他のコンポーネントをハイドレートに含める -->
