--- a/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
@@ -570,7 +570,7 @@ Note that:
 Note that:
 
 - the `getStaticProps` function is no longer needed. Data from the API is fetched directly in the code fence.
-- The `<Layout>` component is imported, and wraps the page templating.
+- The [`<Layout>` component converted earlier](#next-base-layout-to-astro) is imported, and wraps the page templating.
 
 ```astro ins={2,4-16,19,31} title="src/pages/index.astro"
 ---
