Next.js is not gatsby :)

--- a/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
@@ -64,7 +64,7 @@ When you rebuild your Next.js site in Astro, you will notice some important diff
   
   Then, copy your existing Next project files over to your new Astro project in a separate folder outside of `src`.
 
-- Option 2: **Update your existing Gatsby project dependencies**
+- Option 2: **Update your existing Next project dependencies**
 
   Remove any Next or React-related dependencies in `package.json` and follow all the steps to [install Astro manually](/en/install/manual/) in your existing repository. (You may wish to do this on a different branch.) 
   
@@ -109,7 +109,7 @@ Here are some tips for converting a Next `.js` component into a `.astro` compone
 
 1. Move any necessary JavaScript, including import statements, into a "code fence" (`---`). Note: JavaScript to [conditionally render content](/en/core-concepts/astro-components/#dynamic-html) is often written inside the HTML template directly in Astro.
 
-4. Write an `Astro.props` statement to access any additional props that were previously passed to your Gatsby function.
+4. Write an `Astro.props` statement to access any additional props that were previously passed to your Next function.
 
 4. Decide whether any imported components also need to be converted to Astro. With the official integration installed, you can [use existing React components in your Astro file](/en/guides/integrations-guide/react/). But, you may want to convert them to Astro, especially if they do not need to be interactive!
 
@@ -312,7 +312,7 @@ In Astro, **your pages must live within `src/pages/`**. You will not have to con
 
 #### React pages
 
-Your existing Gatsby JSX (`.js`) pages will need to be [converted from JSX files to `.astro` pages](#convert-jsx-files-to-astro-files).
+Your existing Next JSX (`.js`) pages will need to be [converted from JSX files to `.astro` pages](#convert-jsx-files-to-astro-files).
 
 #### Markdown and MDX pages
 
