--- a/src/pages/ja/install/auto.mdx
+++ b/src/pages/ja/install/auto.mdx
@@ -50,7 +50,7 @@ Astroをインストールする準備はできましたか？自動または手
   </Fragment>
 </PackageManagerTabs>
 
-`create-astro`はマシンの任意の場所で実行でき、始める前にプロジェクト用の新しい空のディレクトリを作成する必要はありません。新しいプロジェクト用の空のディレクトリがまだなければ、ウィザードが自動的に作成します。
+`create-astro`はどのディレクトリでも実行でき、始める前にプロジェクト用の新しい空のディレクトリを作成する必要はありません。新しいプロジェクト用の空のディレクトリがまだなければ、ウィザードが自動的に作成します。
 
 すべてがうまくいけば、「Ready for liftoff!」というメッセージの後に、いくつかの推奨する「Next steps」が表示されるはずです。新しいプロジェクトディレクトリに`cd`で移動し、Astroの使用を開始します。
 
