--- a/src/pages/en/guides/integrations-guide.mdx
+++ b/src/pages/en/guides/integrations-guide.mdx
@@ -157,7 +157,7 @@ import type { AstroIntegration, AstroConfig } from 'astro';
 
 ### Writing Our Integration
 
-To make our integration work, we'll have to export a function that the user can call from their `astro.config,mjs` file.
+To make our integration work, you would have to export a function that the user can call from their `astro.config,mjs` file.
 
 This function returns a `AstroIntegration` type.
 
@@ -171,9 +171,9 @@ export default function int_test(options: testOptions): AstroIntegration {
 
 ### Using Hooks
 
-Astro comes with a bunch of [hooks](/en/reference/integrations-reference/#hooks) that you can use during the lifecycle of the website. These hooks allow you to fire certain functions when an event starts. Hooks come with a bunch of params that we can use in their callback functions.
+Astro comes with a bunch of [hooks](/en/reference/integrations-reference/#hooks) that you can use during the lifecycle of the website. These hooks allow you to fire certain functions when an event starts. Hooks come with a bunch of parameters that you can use in their callback functions.
 
-In our `integration.ts` file, we can call these hooks can run various functions.
+In your `integration.ts` file, you can call these hooks can run various functions.
 
 ```ts title="/src/lib/integration.ts"
 
@@ -189,7 +189,7 @@ export default function int_test(): AstroIntegration {
 
 
 ```
-`astro:config:setup` runs when the `dev` or `build` server is started. We can use this hook to inject routes, make changes to the config or read data given to us by the user.
+`astro:config:setup` runs when the `dev` or `build` server is started. You can use this hook to inject routes, make changes to the config or read data given to us by the user.
 
 Let's add a quick and dirty callback function to our first hook.
 
@@ -203,11 +203,11 @@ hooks: {
 
 ```
 
-`command` shows us what command is being run. It can be either `build` or `dev`.
+`command` returns what command is being run. It can be either `build` or `dev`.
 
 ### Running Our Integration
 
-To run our integration, first, we would need to import it on our `astro.config.mjs` file.
+To run your integration, first, you would need to import it on your `astro.config.mjs` file.
 
 ```js title="astro.config.mjs" {2, 4}
 
@@ -228,12 +228,12 @@ astro:config:setup> running command: dev
 
 ### User Config
 
-Now that we have a working integration, one thing you might want to do is to add a way for the users to configure various data.
+Now that you have a working integration, one thing you might want to do is to add a way for the users to configure various data. For example the config in [TailWind](/en/guides/integrations-guide/tailwind/#configuration) integration.
 
 You can do so by first creating a type.
 
 :::note
-Creating a type is optional, however recommended so that the users can get IntelliSense for when they code.
+Creating a type is optional, however recommended so that the users can get IntelliSense for when they use your integration.
 :::
 
 ```ts title="/src/lib/integration.ts"
@@ -244,7 +244,7 @@ type AwesomeType = {
 
 ```
 
-Now, we can pass a parameter to our function with this type.
+Now, you can pass a parameter to your function with this type.
 
 ```ts title="/src/lib/integration.ts" /options: AwesomeType/
 
@@ -252,7 +252,7 @@ export default function int_test(options: AwesomeType): AstroIntegration { /* Co
 
 ```
 
-Great! Now we can pass a value to our function in our ```astro.config.mjs``` file.
+Great! Now you can pass a value to our function in our ```astro.config.mjs``` file.
 
 ```js title="astro.config.mjs" {6}
 
@@ -267,7 +267,7 @@ export default defineConfig({
 
 ```
 
-At this point in time, we can use the `options` parameter in our hooks.
+At this point in time, you can use the `options` parameter in your hooks.
 
 ```ts title="/src/lib/integration.ts"
 
